:necktie: get specific transaction type by transaction id
